# robotframework-TrainingREST

./: GoRESTDriver_create_test.py  GoRESTDriver_test_delete.py  GoRESTDriver_test_get.py  GoRESTDriver_test_update.py  README.md  pyproject.toml  requirements.txt  setup.py  test_1.py  test_Marta.py  test_create.py  test_create_with_json.py  test_driver_live.py  test_get.py  test_token_in_header.py  test_token_in_url.py  test_user_pwd.py  user_data_1.json  user_data_2_update.json
Driver_Live/: driver_live.py
GoRESTDriver/: __init__.py  gorest_driver.py
GoRESTDriver/drivers/: Common.py  TokenHeader.py  TokenURL.py  UserPwd.py
data/: 1.json  2.json
robotframework_TrainingREST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
